[package]
name = "isucon-restruct-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
structopt = "0.3"
syn = { version = "2.0", features = ["full"] }
heck = "0.4"
itertools = "0.11"
